#176229 - Better deal with URLs.